refactor: Ajustes na busca por destino e preferência
