# src/controllers/usuario/findAll.js
@@ -1,4 +1,5 @@
 const db = require('../../models');
+const { Op } = require('sequelize');
 const UsuarioService = require('../../services/usuario');
 const HttpResponse = require('../../config/helpers/http-response');
 
@@ -7,15 +8,18 @@ module.exports = {
     try {
           const usuarioService = new UsuarioService('Usuario', req);
 
+          const { searchDestino, searchPref } = req.query;
+
           const includes = {
             include: [
               { model: db.Avaliacao, as: 'avaliacao'},    
               { model: db.Destino, as: "destino",
+                where: { cidade: { [Op.iLike]: '%' + searchDestino + '%' } }, 
                 attributes: ['id','usuario_id','descricao','data_partida','data_retorno','cidade','pais_id','latitude','longitude']
               },
               {
-                model: db.Preferencia,
-                as: 'preferencias',
+                model: db.Preferencia, as: 'preferencias',
+                where: { descricao: { [Op.iLike]: '%' + searchPref + '%' } }, 
                 through: { attributes: [] },
               },    
               { model: db.Conexao, as: "conexoes_recebidas"},
